showcase section added

--- a/index.html
+++ b/index.html
@@ -171,5 +171,19 @@
             </button>
         </div>
     </section>
+    <section class="show">
+        <div class="market">
+            <h1>Why Food Market ?</h1>
+        </div>
+        <div class="showcase">
+            <div class="showImage">
+                <img src="./images/image.svg" alt="pic">
+            </div>
+            <div class="showWords">
+                <p>Food market delivers a quality, healthy and affordable food stuffs to you through our obsession with the culinary process of burger creation. Our menu features signature 100% Certified Angus Beef Burgers grilled in an open kitchen easily viewable by customers, serving up signature options.</p>
+                <button>Learn More</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
