--- a/index.html
+++ b/index.html
@@ -185,5 +185,27 @@
             </div>
         </div>
     </section>
+    <section class="testimonial">
+        <h4>What Our Happy Client Says?</h4>
+        <div class="person">
+            <div class="left">
+                <img src="./images/left.png" alt="person" class="pic">
+                <img src="./images/arrowleft.svg" alt="arrow" class="arrowleft">
+            </div>
+            <div class="middle">
+                <img src="./images/middle.png" alt="person">
+                <p class="name">Stephanie Woods</p>
+                <p class="location">Lagos, Nigeria</p>
+                <img src="./images/star.png" alt="star" class="star">
+                <h3>I have never regretted shopping <br>  
+                    with food market, <br>
+                     always on point</h3>
+            </div>
+            <div class="right">
+                <img src="./images/right.png" alt="person">
+                <img src="./images/arrowright.svg" alt="arrow" class="arrowright">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
