--- a/index.html
+++ b/index.html
@@ -207,5 +207,57 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="normal">
+        <div class="footitem">
+            <img  class="footerlogo" src="./images/Logo.svg" alt="">
+                <p> Food market was opened with the notion; to serve quality food stuff and, in the process, delivering at your doorstep at the snap of a finger.</p>
+                <div class="footerimg">
+                    <img src="./images/facebook.png" alt="facebook">
+                    <img src="./images/twitter.png" alt="twitter">
+                    <img style="width: 25.6px;" src="./images/instagram.png" alt="instagram">
+                </div>
+        </div>
+        <div class="footitems">
+            <div class="holder">
+                <h4>Support</h4>
+                <ul>
+                    <li>Acoount</li>
+                    <li>Support Center</li>
+                    <li>Contact Us</li>
+                    <li>Feedback</li>
+                    <li>Accessibility</li>
+                </ul>
+            </div>
+            <div class="holder">
+                <h4>Contact</h4>
+                <ul>
+                    <li>WhatsApp</li>
+                    <li>Mail</li>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                </ul>
+            </div>
+            <div class="holder">
+                <h4>About Us</h4>
+                <ul>
+                    <li>About Us</li>
+                    <li>Features</li>
+                    <li>News</li>
+                    <li>Menu</li>
+                </ul>
+            </div>
+            <div class="holder">
+                <h4>Subscribe</h4>
+                <form action="">
+                    <p>Don't miss out on our great offers via e-mail</p>
+                    <input  class="menubtn1" type="email" name="email" id="email" placeholder="Email" required>
+                    <input class="menubtn2" type="submit" value="Subscribe Newsletter">
+                </form>
+            </div>
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
