--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="cart">
             <img class="desktop" src="./images/Vector.svg" alt="cart">
             <div class=" desktop line"></div>
-            <button class=" desktop">Get Started</button>
+            <a href="./sign.html"><button class=" desktop">Get Started</button></a>
             <div class="hamburger">
                 <img src="./images/hamburger.jpg" alt="hamburger">
             </div>
