--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             </div>
             <div class="herobtn">
-                <button class="shop">Shop now</button>
+                <a href="./sign.html"><button class="shop">Shop now</button></a>
                 <button class="btn2">What are you look for ?
                     <img src="./images/Group.png" alt="circle">
                 </button>
