--- a/sign.html
+++ b/sign.html
@@ -37,7 +37,7 @@
                         <h5>Sign in with Google</h5>
                     </button>
                     <div class="center">
-                        <p class="center">Don’t have an account? <span>Sign up</span></p>
+                        <p class="center">Don’t have an account? <a href="./signUp.html" style="color: #1E510C; "><span>Sign up</span></a></p>
                     </div>
                 </form>
                 
