styling sign up page

--- a/sign.html
+++ b/sign.html
@@ -26,8 +26,8 @@
                     <input type="password" name="password" id="password" required>
                     <div class="under">
                         <div class="under2">
-                            <img src="./images/Rectangle 14 (1).png" alt="">
-                            <p>Remember me</p>
+                            <input type="checkbox" name="check" id="check">
+                            <label class="p" for="check">Remember me</label>
                         </div>
                             <p class="forget">Forget Password?</p>
                     </div>
