--- a/sign.html
+++ b/sign.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/Logo.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Noto+Sans:wght@400;500;700&family=Public+Sans:wght@300;400;700&family=Rufina&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sign.css">
     <title>Sign Up</title>
 </head>
@@ -12,7 +15,7 @@
     <div class="container">
         <div class="item item1">
             <div class="logo">
-                <img src="./images/Logo.svg" alt="logo">
+                <a href="./index.html"><img src="./images/Logo.svg" alt="logo"></a>
             </div>
             <div>
                 <div class="login">
@@ -34,7 +37,7 @@
                     <input  class="submit" type="submit" value="Sign in">
                     <button>
                         <img src="./images/flat-color-icons_google.svg" alt="google">
-                        <h5>Sign in with Google</h5>
+                        <p>Sign in with Google</p>
                     </button>
                     <div class="center">
                         <p class="center">Don’t have an account? <a href="./signUp.html" style="color: #1E510C; "><span>Sign up</span></a></p>
