--- a/signUp.html
+++ b/signUp.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="signup.css">
     <link rel="shortcut icon" href="./images/Logo.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Noto+Sans:wght@400;500;700&family=Public+Sans:wght@300;400;700&family=Rufina&display=swap" rel="stylesheet">
     <title>SignUp</title>
 </head>
 <body>
    <div class="container">
         <div class="item itme1">
             <div class="logo">
-                <img src="./images/Logo.svg" alt="logo">
+                <a href="./index.html"><img src="./images/Logo.svg" alt="logo"></a>
             </div>
             <div>
                 <div class="login">
@@ -44,10 +47,10 @@
                             <input type="password" name="confirmpassword" id="confirmpassword" required>
                         </div>
                     </div>
-                     <input  class="submit" type="submit" value="Sign in">
+                     <input   class="submit" type="submit" value="Sign in">
                      <button>
-                        <img src="./images/flat-color-icons_google.svg" alt="google">
-                        <h5>Sign in with Google</h5>
+                        <img class="google" src="./images/flat-color-icons_google.svg" alt="google">
+                        <p>Sign in with Google</p>
                      </button>
                      <div class="center">
                         <p class="center">Already have an account? <a href="./sign.html" style="color: #1E510C"><span>Sign In</span></a></p>
