working on outline form

--- a/signUp.html
+++ b/signUp.html
@@ -36,7 +36,7 @@
                     <label for="email">Email</label> <br>
                     <input type="email" name="email" id="email" required> <br>
                     <label for="phonenumber">Mobile Number</label> <br>
-                    <input type="number" name="phoneNumber" id="phoneNumber" required> <br>
+                    <input type="number" name="phoneNumber" id="phoneNumber" placeholder="+234" required> <br>
                     <div class="break">
                         <div>
                             <label for="password">Password</label> <br>
