worked on desktop view

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="title">
             <h1>Our Products</h1>
             <nav>
-                <a style="color: #034B06; font-weight: 700; "href="">All</a>
+                <a style="color: #034B06; font-weight: 700; "href="" class="bold">All </a>
                 <a style="color: #00000052;" href="">Grains</a>
                 <a style="color: #00000052;" href="">Vegetables</a>
                 <a style="color: #00000052;" href="">Fruits</a>
@@ -71,7 +71,7 @@
             <div class="all">
                 <a style="color: #034B06; font-weight: 700; "href="">All</a>
             </div>
-            <hr>
+            <!-- <hr> -->
         </div>
     </section>
     <section class="cartItems">
