worked on the styling

--- a/index.html
+++ b/index.html
@@ -71,13 +71,12 @@
             <div class="all">
                 <a style="color: #034B06; font-weight: 700; "href="">All</a>
             </div>
-            <!-- <hr> -->
         </div>
     </section>
     <section class="cartItems">
         <div class="cartElements Element1">
             <div class="cartgoods goods1">
-                <img src="./images/rice.png"alt="rice">
+                <img class="name"  src="./images/rice.png"alt="rice">
                 <div class="goodsname">
                     <h4>Rice</h4>
                     <div class="goodsprice">
@@ -85,6 +84,7 @@
                         <p>per congo</p>
                     </div>
                 </div>
+                <img class="pricing" src="./images/price and qty.png" alt="">
                 
                 <button>
                     <p>Add to cart</p>
@@ -92,7 +92,7 @@
                 </button>
             </div>
             <div class="cartgoods goods2">
-                <img src="./images/beans.png" alt="Beans">
+                <img class="name" src="./images/beans.png" alt="Beans">
                 <div class="goodsname">
                     <h4>Beans</h4>
                     <div class="goodsprice">
@@ -100,6 +100,8 @@
                         <p>per congo</p>
                     </div>
                 </div>
+                <img class="pricing" src="./images/price and qty.png" alt="">
+
                 <button>
                     <p>Add to cart</p>
                     <img src="./images/Vector.png" alt="cart">
@@ -114,6 +116,7 @@
                         <p>per unit</p>
                     </div>
                 </div>
+                <img  class="pricing" src="./images/price and qty (1).png" alt="oil">
                 <button>
                     <p>Add to cart</p>
                     <img src="./images/Vector.png" alt="cart">
@@ -130,6 +133,7 @@
                         <p>per congo</p>
                     </div>
                 </div>
+                <img class="pricing" src="./images/price and qty.png" alt="">
                 <button>
                     <p>Add to cart</p>
                     <img src="./images/Vector.png" alt="cart">
@@ -144,13 +148,14 @@
                         <p>per plate</p>
                     </div>
                 </div>
+                <img class="pricing" src="./images/price and qty (2).png" alt="pepper">
                 <button>
                     <p>Add to cart</p>
                     <img src="./images/Vector.png" alt="cart">
                 </button>
             </div>
             <div class="cartgoods goods6">
-                <img  class="yam"src="./images/yam.png" alt="yam">
+                <img class="yam"src="./images/yam.png" alt="yam">
                 <div class="goodsname">
                     <h4>Yam</h4>
                     <div class="goodsprice">
@@ -158,6 +163,7 @@
                         <p>per tuber</p>
                     </div>
                 </div>
+                <img class="pricing" src="./images/price and qty.png" alt="">
                 <button>
                     <p>Add to cart</p>
                     <img src="./images/Vector.png" alt="cart">
@@ -222,7 +228,7 @@
             <div class="holder">
                 <h4>Support</h4>
                 <ul>
-                    <li>Acoount</li>
+                    <li>Account</li>
                     <li>Support Center</li>
                     <li>Contact Us</li>
                     <li>Feedback</li>
