worked on general corrections

--- a/index.html
+++ b/index.html
@@ -14,25 +14,30 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                <img src="./images/Logo.svg" alt="logo">
+            <div class="contain">
+                <div class="logo">
+                    <img src="./images/Logo.svg" alt="logo">
+                </div>
+                <nav class="nav">
+                    <ul>
+                        <a style=" color: #000000; font-weight: 700;" href="">Home</a>
+                        <a style="color: #00000052;" href="">Product</a>
+                        <a style="color: #00000052;" href="">Delivery</a>
+                        <a style="color: #00000052;" href="">Contact</a>
+                    </ul>
+                </nav>
             </div>
-            <nav class="nav">
-                <ul>
-                    <a style=" color: #000000; font-weight: 700;" href="">Home</a>
-                    <a style="color: #00000052;" href="">Product</a>
-                    <a style="color: #00000052;" href="">Delivery</a>
-                    <a style="color: #00000052;" href="">Contact</a>
-                </ul>
-            </nav>
-        </div>
+        <!-- </div> -->
         <div class="cart">
             <img class="desktop" src="./images/Vector.svg" alt="cart">
             <div class=" desktop line"></div>
             <a href="./sign.html"><button class=" desktop">Get Started</button></a>
-            <div class="hamburger">
-                <img src="./images/hamburger.jpg" alt="hamburger">
-            </div>
+        </div>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
         </div>
     </header>
     <main class="hero">
@@ -108,7 +113,7 @@
                 </button>
             </div>
             <div class="cartgoods goods3"> 
-                <img src="./images/oil.png" alt="oil">
+                <img  src="./images/oil.png" alt="oil">
                 <div class="goodsname">
                     <h4>Veg Oil</h4>
                     <div class="goodsprice">
